# athena-rs

./: .editorconfig  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  gen-readme.sh
.github/workflows/: audit.yaml  cargo-clippy.yml  cargo-doc.yaml  cargo-fmt.yaml  cargo-test.yaml  ci.yaml  cov.yaml  gen.yaml  release.yaml  rust-clippy.yml  rust-doc.yaml  rust-fmt.yaml  rust-test.yaml
examples/base/: index.sql  macros.sql  table_1.sql  table_1_partitions.sql  table_2.sql  view.sql
examples/prd/: index.sql
examples/stg/: index.sql
src/: apply.rs  build.rs  cli.rs  lib.rs  main.rs  tera.rs  utils.rs
tests/: cli_build.rs  test_build_examples.rs  test_cmd_build.rs
