[package]
name = "athena"
version = "0.1.0"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
aws-config = "0.101.0"
aws-sdk-athena = "0.39.0"
bat = "0.24.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
devtimer = "4.0.1"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.4"
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
indoc = "2.0.5"
predicates = "3.1.0"
serial_test = "2.0.0"
tempfile = "3.10.1"
