[package]
name = "athena"
version = "0.1.0"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]
description = "A Rust-based CLI tool for managing AWS Athena schemas using templated SQL with Tera"
license = "MIT"
repository = "https://github.com/duyet/athena-rs"
homepage = "https://github.com/duyet/athena-rs"
documentation = "https://docs.rs/athena"
keywords = ["aws", "athena", "sql", "template", "cli"]
categories = ["command-line-utilities", "database", "template-engine"]
readme = "README.md"
rust-version = "1.91.1"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
aws-config = "1.5"
aws-sdk-athena = "1.48"
bat = "0.23"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
devtimer = "4.0"
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
regex = "1.10"
tera = "1.20"
tokio = { version = "1.40", features = ["full"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
indoc = "2.0"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.13"

[lints.clippy]
# Deny unsafe practices
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Encourage best practices
todo = "warn"
unimplemented = "warn"
# Performance
needless_pass_by_value = "warn"
# Readability
missing_errors_doc = "allow"
missing_panics_doc = "allow"
